# ScrollShooter

./: .gitignore  CMakeLists.txt  README.md
code/include/: pawns.h  scrollshooter.h
code/libraries/: config.h  timer.h
code/src/: main.cpp  pawns.cpp  scrollshooter.cpp
config/: config.json
src/: config.h  gamemode.cpp  gamemode.h  main.cpp  pawns.cpp  pawns.h
